[package]
name = "system"
version = "0.1.0"
edition = "2018"

[dependencies]
bootloader = "0.11.11"
volatile = "0.2.6"
x86_64 = "0.14.2"


[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
test-args = […]
test-success-exit-code = 33         # (0x10 << 1) | 1
